force-app/main/default/objects/SPEN_IncidentAutomaticRefresh__mdt/SPEN_IncidentAutomaticRefresh__mdt.object-meta.xml
<CustomObject>
    <description>The incident record page will automatically refresh</description>
    <label>Incident Automatic Refresh</label>
    <pluralLabel>Incident Automatic Refresh</pluralLabel>
</CustomObject>