force-app/main/default/objects/SPEN_IncidentAutomaticRefresh__mdt/fields/SPEN_Channel__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Channel__c</fullName>
    <label>Channel</label>
    <length>50</length>
    <type>Text</type>
</CustomField>