force-app/main/default/objects/SPEN_IncidentAutomaticRefresh__mdt/fields/SPEN_CustomPermission__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CustomPermission__c</fullName>
    <label>Custom Permission</label>
    <length>50</length>
    <type>Text</type>
</CustomField>