force-app/main/default/objects/SPEN_IncidentAutomaticRefresh__mdt/fields/SPEN_ObjectAPIName__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ObjectAPIName__c</fullName>
    <label>Object (API Name)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>